--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -21,6 +21,8 @@ Supposed by some to derive from {{etyl|gd|en}} {{term|stob||to prick, to prod, t
 # {{context|informal|lang=en}} An [[attempt]].
 #: ''I'll give this [[thankless]] task a '''stab'''.''
 # [[criticism|Criticism]].
+# {{cx|music|lang=en}} A single [[staccato]] [[chord]] that adds dramatic impact to a [[composition]].
+#: ''a horn '''stab'''''
 
 ====Derived terms====
 * [[have a stab at]], [[take a stab at]]
