--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -60,6 +60,8 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 # {{cx|cricket|lang=en}} To strike the ball in a particular manner. (See noun sense.)
 #* R. H. Lyttelton
 #*: Never '''pull''' a straight fast ball to leg.
+# {{cx|UK|slang}} To pour beer from a pump, keg, or other source.
+#: ''Let's stop at Finnigan's.  The barkeep ''pulls'' a good pint.''
 
 ====Synonyms====
 * {{sense|apply force to (something) so it comes toward}} [[drag]], [[tow]], [[tug]], [[yank]]
