--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -328,7 +328,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Persian: {{t+|fa|دعوا|tr=da'vâ}}
 * Pijin: {{t|pis|faet}}
 * Polish: {{t+|pl|bójka|f}}, {{t+|pl|bój|m}}
-* Portuguese: {{t+|pt|luta|f}}
+* Portuguese: {{t+|pt|luta|f}}, {{t+|pt|briga|f}}
 * Romanian: {{t|ro|luptă|f}}, {{t+|ro|bătaie}}
 * Romansch: {{qualifier|military}} {{t|rm|cumbat|m}}, {{t|rm|cumbata|f}}, {{qualifier|sport}} {{t|rm|lutga|f}}
 * Russian: {{t+|ru|драка|f|tr=dráka}}, {{t+|ru|бой|m|tr=boj}}, {{t+|ru|стычка|f|tr=stýčka|sc=Cyrl}}
@@ -441,6 +441,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 {{trans-mid}}
 * Persian: {{t+|fa|نزاع|tr=nezâ'}}, {{t+|fa|کشمکش|tr=kešmakeš}}
 * Polish: {{t+|pl|walka|f}}
+* Portuguese: {{t+|pt|luta|f}}
 * Russian: {{t+|ru|борьба|f|tr=borʹbá}}
 * Scottish Gaelic: {{t|gd|còmhrag|f}}
 * Serbo-Croatian:
