--- a/en/昉/昉.16945.wikitext
+++ b/en/昉/昉.16945.wikitext
@@ -37,7 +37,8 @@
 ===Hanja===
 {{ko-hanja|hangeul=방|eumhun=|rv=bang|mr=pang|y=pang}}
 
-# {{defn|lang=ko|sort=日04}}
+# [[bright]]
+# [[begin]]
 
 ----
 
