--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -75,6 +75,18 @@
 
 ----
 
+==Min Nan==
+
+===Hanzi===
+{{nan-hanzi|tlpa=[[sī]] (si<sup>7</sup>)}}
+
+# {{defn|lang=nan|sort=日05}}
+
+====References====
+*[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=5013&curpage=1&sample=%E6%98%AF&radiobutton=1&querytarget=1&limit=20&pagenum=2&rowcount=32 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
+
+----
+
 ==Vietnamese==
 
 ===Han character===
