--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -76,6 +76,7 @@ From {{etyl|enm|en}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Albanian: {{t|sq|urë|f}}
 * Arabic: {{t|ar|جسر|m|tr=jisr|sc=Arab}}
 *: Egyptian Arabic: {{t|arz|كوبري|m|tr=kobri|sc=Arab}}
+* Aramaic: {{t|arc|גֶּשֶׁר|m|tr=gešer}}
 * {{trreq|an}}
 * Armenian: {{t+|hy|կամուրջ}}
 * Asturian: {{t|ast|ponte|f}}, {{t|ast|puente|m}}
