--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -324,6 +324,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Latvian: {{t|lv|cīņa}}, {{t|lv|kauja|f}}
 * Lithuanian: {{t+|lt|kova|f}}, {{t|lt|muštynės|p}}, {{t|lt|grumtynės|p}}
 * Macedonian: {{t|mk|бој|m|tr=boj|sc=Cyrl}}
+* {{trreq|Mongolian}}
 * Norwegian: {{t+|no|slåsskamp}}
 * Persian: {{t+|fa|دعوا|tr=da'vâ}}
 * Pijin: {{t|pis|faet}}
@@ -396,6 +397,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Latvian: {{t|lv|kautiņš}}
 {{trans-mid}}
 * Lithuanian: {{t|lt|muštynės|p}}, {{t|lt|peštynės|p}}, {{t|lt|grumtynės|p}}
+* {{trreq|Mongolian}}
 * Norwegian: {{t+|no|slåsskamp}}
 * Persian: {{t+|fa|دعوا|tr=da'vâ}}
 * Pijin: {{t|pis|faet}}
