--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -44,7 +44,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * German: {{t+|de|zählen}}
 * Greek: {{t+|el|μέτρημα|n|sc=Grek}}, {{t+|el|μέτρηση|f|sc=Grek}}, {{t+|el|καταμέτρηση|f|sc=Grek}}
 * Icelandic: {{t|is|talning|f}}
-* Portuguese: {{t+|pt|contar}}
+* Portuguese: {{t+|pt|contagem|f}}
 * Romanian: {{t|ro|socoti}}
 * Russian: {{t+|ru|счёт|m|tr=sčot|sc=Cyrl}}
 * Spanish: {{t+|es|cuenta|f}}
@@ -70,6 +70,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Kyrgyz: {{t+|ky|эсеп}}
 * Middle English: {{t|enm|counte}}
 * Navajo: {{t|nv|nambooígíí}}
+* Portuguese: {{t+|pt|contagem|f}}
 * Romanian: {{t|ro|numărare|f}}
 * Russian: {{t+|ru|счёт|m|tr=sčot|sc=Cyrl}}
 * Slovene: {{t|sl|rezultat|m}}
@@ -87,6 +88,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * French: {{t+|fr|compte à rebours}}, {{t+|fr|décompte|m}}
 * Macedonian: {{t|mk|одбројување|n|tr=odbrojúvanje}}
 * Polish: {{t+|pl|odliczanie|n}}
+* Portuguese: {{t+|pt|contagem final|f}}
 * Romanian: {{t|ro|numărătoare|f}}
 * Russian: {{t+|ru|отсчёт|m|tr=otsčot|sc=Cyrl}}
 * Slovene: {{t|sl|odštevanje|n}}
