--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -42,19 +42,19 @@ From {{etyl|ang|en}} {{term|clingan||to adhere|lang=ang}}; akin to {{etyl|da|-}}
 {{trans-top|hold tightly}}
 * Arabic: {{t|ar|تمسك|tr=tamassaka}}
 * Armenian: {{t|hy|կառչել|tr=kaṙčel}}
-* Bulgarian: {{t+|bg|прилепвам}},  {{t|bg|придържам се о}}
+* Bulgarian: {{t+|bg|прилепвам}}, {{t|bg|придържам се о}}
 * Chinese:
-*: Mandarin: {{t|cmn|粘住|tr=niánzhù|sc=Hani}},  {{t+|cmn|依附|tr=yīfù|sc=Hani}}
-* Dutch: [[klampen]]
+*: Mandarin: {{t|cmn|粘住|tr=niánzhù|sc=Hani}}, {{t+|cmn|依附|tr=yīfù|sc=Hani}}
+* Dutch: {{t|nl|klampen}}
 * Estonian: {{t|et|liibuma}}
-* Finnish: [[takertua]], [[tarrautua]]
-* French: [[accrocher]], s'accrocher, [[coller]], se coller
-* [[Galician]]: [[soster]], [[agarrar]] or [[suxeitar]]
-* German: [[haften]], [[klammern]]
+* Finnish: {{t|fi|takertua}}, {{t|fi|tarrautua}}
+* French: {{t|fr|accrocher}}, s'accrocher, {{t|fr|coller}}, se coller
+* [[Galician]]: {{t|gl|soster}}, [[agarrar]] or [[suxeitar]]
+* German: {{t|de|haften}}, {{t|de|klammern}}
 * Indonesian: {{t+|id|sangkut|alt=menyangkut}}, {{t+|id|sangkut|alt=menyangkutkan}}, {{t+|id|gantung|alt=bergantung}}, {{t+|id|gantung|alt=menggantung}}, {{t+|id|gantung|alt=menggantungkan}}
 {{trans-mid}}
 * Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources| ISBN 8839551107]]. [http://www.oxfordparavia.it/ Online version]</ref>, {{t+|it|abbarbicarsi}}, {{t|it|appiccicarsi}}
-* Japanese: {{t+|ja|掛ける|tr=かける, kakeru}},  {{t|ja|ぶら下がる|tr=ぶらさがる, burasagaru}} {{qualifier|intransitive}},  {{t|ja|ぶら下げる|tr=ぶらさげる, burasageru}} {{qualifier|transitive}}
+* Japanese: {{t+|ja|掛ける|tr=かける, kakeru}}, {{t|ja|ぶら下がる|tr=ぶらさがる, burasagaru}} {{qualifier|intransitive}}, {{t|ja|ぶら下げる|tr=ぶらさげる, burasageru}} {{qualifier|transitive}}
 * Maori: {{t|mi|whakaawhiawhi}}
 * Norwegian: {{t|no|klenge}}
 * Polish: {{t|pl|przylgnąć}}
