--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -39,13 +39,14 @@
 * Galician: {{t|gl|feltro|m}}
 * German: {{t+|de|Filz|n}}
 * Greek: {{t+|el|κετσές|m|tr=ketsés|sc=Grek}}
-{{trans-mid}}
 * Hebrew: {{t+|he|לבד|m|tr=léved}}
+{{trans-mid}}
 * Hungarian: {{t+|hu|nemez}}, {{t|hu|filc}}
 * Ido: {{t+|io|felto}}
 * Italian: {{t+|it|feltro|m}}
 * Japanese: {{t|ja|フェルト|tr=feruto|sc=Jpan}}, {{t|ja|羅紗|tr=らしゃ, rasha|sc=Jpan}}
 * Luxembourgish: {{t|lb|Filz|m}}
+* Mongolian: {{t|mn|эсгий|sc=Cyrl}}
 * Norwegian: {{t+|no|filt|m}}
 * Persian: {{t+|fa|نمد|tr=namad|sc=fa-Arab}}
 * Portuguese: {{t+|pt|feltro|m}}
