--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -71,7 +71,7 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 * Polish: {{t+|pl|budować}}, {{t+|pl|zbudować}}, {{t+|pl|tworzyć}}, {{t+|pl|stworzyć}}
 * Portuguese: {{t+|pt|fundar}}
 * {{trreq|ro}}
-* Russian: {{t+|ru|основывать|tr=osnóvyvat'}} {{impf}}, {{t+|ru|основать|tr=osnovát'}} {{pf.}}
+* Russian: {{t+|ru|основывать|impf|tr=osnóvyvat'}}, {{t+|ru|основать|pf|tr=osnovát'}}
 * Scots: {{t|sco|foond}}
 * Spanish: {{t+|es|fundar}}
 * Swedish: {{t|sv|grundlägga}}
@@ -97,7 +97,7 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 * Polish: {{t+|pl|założyć}}, {{t+|pl|zakładać}}
 * Portuguese: {{t+|pt|fundar}}
 * {{trreq|ro}}
-* Russian: {{t+|ru|основывать|tr=osnóvyvat'}} {{impf}}, {{t+|ru|основать|tr=osnovát'}} {{pf.}}
+* Russian: {{t+|ru|основывать|impf|tr=osnóvyvat'}}, {{t+|ru|основать|pf|tr=osnovát'}}
 * Scots: {{t|sco|foond}}
 * Spanish: {{t+|es|fundar}}
 * Swedish: {{t+|sv|grunda}}
