--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -355,7 +355,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 *: Logudorese Sardinian: {{t|src|aggarrare}}
 * Sassarese Sardinian: {{t|sdc|agguantà}}
 * Scottish Gaelic: {{t|gd|glac}}
-* Ukrainian: {{t+|ukr|ловити|impf|tr=lovýty|sc=Cyrl}}
+* Ukrainian: {{t+|uk|ловити|impf|tr=lovýty|sc=Cyrl}}
 
 {{trans-bottom}}
 
