--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -111,7 +111,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 *: Sorani: {{t+|ku|گرتن}}
 * Marathi: {{t|mr|कॅच|m|tr=kǎca|sc=Deva}}
 * Portuguese: {{t+|pt|pegar}}, {{t|pt|apanhadura|f}}, {{t|pt|apanhada|f}}
-* Russian: {{t+|ru|пои́мка|f|sc=Cyrl|tr=poímka}}, {{t+|ru|захва́т|m|sc=Cyrl|tr=zaxvát}}
+* Russian: {{t+|ru|пои́мка|f}}, {{t+|ru|захва́т|m}}
 * Swahili: {{t+|sw|daka}}
 * Swedish: {{t+|sv|fångst|c}}
 {{trans-bottom}}
@@ -148,7 +148,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Hungarian: {{t+|hu|bökkenő}}
 * Italian: {{t+|it|trappola}}, {{t|it|trabocchetto|m}}, {{t+|it|trucco|m}}, {{t|it|fregatura|f}}
 * Portuguese: {{t+|pt|cilada|f}}
-* Russian: {{t+|ru|подво́х|sc=Cyrl|tr=podvóx}}
+* Russian: {{t+|ru|подво́х}}
 * Spanish: {{t+|es|pega|f}}, {{t+|es|traba|f}}, {{t+|es|truco|m}}, {{t+|es|cuestión|f}}, {{t+|es|trampa|f}}
 * Swedish: {{t+|sv|hake|c}}
 {{trans-bottom}}
@@ -165,7 +165,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 *: Bokmål: {{t|no|fangst|m}}
 *: Nynorsk: {{t|nn|fangst|m}}
 * Portuguese: {{t+|pt|presa|f}}
-* Russian: {{t+|ru|уло́в|m|sc=Cyrl|tr=ulóv}}, {{t+|ru|добы́ча|f|sc=Cyrl|tr=dobýča}}
+* Russian: {{t+|ru|уло́в|m}}, {{t+|ru|добы́ча|f}}
 * Swedish: {{t+|sv|fångst|c}}
 {{trans-bottom}}
 
