--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -355,7 +355,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 *: Logudorese Sardinian: {{t|src|aggarrare}}
 * Sassarese Sardinian: {{t|sdc|agguantà}}
 * Scottish Gaelic: {{t|gd|glac}}
-* Ukrainian: {{t+|uk|ловити|impf|tr=lovýty|sc=Cyrl}}, {{t+|uk|пійма́ти|pf|tr=pijmáty|sc=Cyrl}}
+* Ukrainian: {{t+|uk|ловити|impf|tr=lovýty|sc=Cyrl}}, {{t+|uk|піймати|pf|tr=pijmáty|sc=Cyrl}}
 
 {{trans-bottom}}
 
@@ -392,7 +392,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Spanish: [[atajar]] {{qualifier|Latin America}}, [[cazar]] {{qualifier|football}}
 * Swedish: {{t+|sv|fånga}}, {{t+|sv|fatta}} {{qualifier|dated}}
 * Urdu: {{t|ur|پکڑنا|tr=pakaṛnā|sc=ur-Arab}}
-* Ukrainian: {{t+|uk|ловити|impf|tr=lovýty|sc=Cyrl}}, {{t+|uk|пійма́ти|pf|tr=pijmáty|sc=Cyrl}}
+* Ukrainian: {{t+|uk|ловити|impf|tr=lovýty|sc=Cyrl}}, {{t+|uk|піймати|pf|tr=pijmáty|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|to perceive and understand {{jump|t|perceive and understand}} }}
