--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -198,6 +198,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * Bulgarian: {{t+|bg|извивам}}, {{t+|bg|изкривявам}}
 * Dutch: {{t+|nl|krommen}}, {{qualifier|pipe}} {{t+|nl|plooien}}, {{t+|nl|buigen}}
 * Finnish: {{t|fi|käyristää}}
+* French: {{t+|fr|courber}}
 * German: {{t+|de|biegen}}, {{t|de|verbiegen}}
 * Irish: {{t|ga|cuar}}
 * Italian: {{t+|it|curvare}}
