--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -89,6 +89,7 @@ From {{etyl|gmh|en}} {{term|spalden|lang=gmh}}, or {{etyl|non|en}} {{term|spald|
 ===Anagrams===
 * [[pelts#English|pelts]], [[slept#English|slept]]
 
+[[Category:en:Grains]]
 ----
 
 ==Danish==
