--- a/en/昚/昚.16962.wikitext
+++ b/en/昚/昚.16962.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=大金日 (KCA)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=大金日 (KCA)|ids=⿱[[𡗜]][[日]]}}
 
 # {{defn|Han|sort=日05}}
 
