--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -7,7 +7,7 @@
 ===Etymology===
 From {{etyl|frm|en}} {{term|blond|lang=fr}} {{g|m}}, from {{etyl|fro|en}} {{term|blond|blond, blont|lang=fro}}, from {{etyl|frk|en}} {{term/t|frk|*blund||a mixed color between golden and light-brown}}, from {{etyl|gem-pro|en}} {{term/t|gem-pro|*blundaz||mixed, blinding}}, from {{etyl|ine-pro|en}} {{term/t|ine-pro|*bʰlendʰ-||to become turbid, see badly, go blind}}. Compare {{etyl|ang|-}} {{term|blondenfeax|''blonden''feax|grey-haired|lang=ang}}, {{etyl|ang|-}} {{term|blandan||to mix|lang=ang}}. More at {{l/en|blend}}.
 
-Alternate etymology connects {{etyl|frk|-}} {{term/t|frk|*blund}} to {{etyl|gem-pro|en}} {{term/t|gem-pro|*blundaz||blond}}, from {{etyl|ine-pro|en}} {{term/t|ine-pro|*bʰl̥ndʰ-}}, {{term/t|ine-pro|*bʰlendʰ-||blond, red-haired}}. Cognate with {{etyl|sa|-}} {{term|ब्रध्न||tr=bradhná|ruddy, pale red, yellowish|lang=sa}}.
+Alternative etymology connects {{etyl|frk|-}} {{term/t|frk|*blund}} to {{etyl|gem-pro|en}} {{term/t|gem-pro|*blundaz||blond}}, from {{etyl|ine-pro|en}} {{term/t|ine-pro|*bʰl̥ndʰ-}}, {{term/t|ine-pro|*bʰlendʰ-||blond, red-haired}}. Cognate with {{etyl|sa|-}} {{term|ब्रध्न||tr=bradhná|ruddy, pale red, yellowish|lang=sa}}.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/blɒnd/}}
