--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -23,7 +23,7 @@ Alternative etymology connects {{etyl|frk|-}} {{term/t|frk|*blund}} to {{etyl|ge
 
 ====Usage notes====
 * In English, this is one of a few words which can show gender, with "blond" being used of males and "blonde" of females, following French usage.
-* Some writers, especially in the US treat the spellings as interchangeable or use ''blond'' gender-neutrally.
+* Some writers, especially in the US, treat the spellings as interchangeable or use ''blond'' gender-neutrally.
 * Traditional terms for light hair in English are "''[[fair]]([[fair-haired|-haired]])''", "''[[fairheaded]]''", "''[[flaxen]]''", "''[[tow-haired]]''", and "''[[towhead]]([[towheaded|ed]])''".
 
 ====Translations====
