--- a/en/愈/愈.15644.wikitext
+++ b/en/愈/愈.15644.wikitext
@@ -4,7 +4,7 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=8033<sub>2</sub>|canj=人一月心 (OMBP)|ids=⿱[[俞]][[心]]}}
 
-# [[more]] and more, [[even more]]
+# [[more and more]], [[even more]]
 
 ====References====
 * {{Han ref|kx=0394.030|dkj=10904|dj=0730.140|hdz=42322.150|uh=6108|ud=24840|bh=B755|bd=46933}}
