--- a/en/愉/愉.15645.wikitext
+++ b/en/愉/愉.15645.wikitext
@@ -53,9 +53,9 @@
 ==Vietnamese==
 
 ===Han character===
-'''愉''' ([[du]])
+{{vi-readings|rs=心09| hanviet = du}}
 
-# {{defn|lang=vi}}
+# {{defn|lang=vi|sort=心09}}
 
 [[fr:愉]]
 [[li:愉]]
