--- a/en/愊/愊.15646.wikitext
+++ b/en/愊/愊.15646.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=9106<sub>6</sub>|canj=心一口田 (PMRW), X心一口田 (XPMRW)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=9106<sub>6</sub>|canj=心一口田 (PMRW), X心一口田 (XPMRW)|ids=⿰[[忄]][[畐]]}}
 
 # [[sincere]], [[honest]]
 # [[depressed]]
