--- a/en/愊/愊.15646.wikitext
+++ b/en/愊/愊.15646.wikitext
@@ -11,6 +11,21 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[愊]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=bì,qì
+|c=bik1
+|mc=y
+|oc=y
+|ma=
+|cat=a
+}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -20,15 +35,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[ひょく]] (hyoku), [[ひき]] (hiki), [[ふく]] (fuku)|kun=[[まこと]] (makoto)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[bì]] ([[bi4]]), [[qì]] ([[qi4]])|wg=pi<sup>4</sup>, ch'i<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:愊]]
 [[hu:愊]]
