--- a/en/愋/愋.15647.wikitext
+++ b/en/愋/愋.15647.wikitext
@@ -3,7 +3,7 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9204<sub>7</sub>|canj=心月一水 (PBME)|ids=⿰[[忄]][[爰]]}}
 
-# [[talent]]ed
+# [[talented]]
 # [[intelligent]], [[wise]] [[wisdom]], [[knowledge]]
 # [[resent]]
 # to [[hate]]
@@ -15,24 +15,21 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愋]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[hyun1]]|y=hyun1}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=xuān
+|c=hyun1
+|mc=y
+|oc=y
+|ma=
+|cat=a,v
+}}
 
 ====References====
 *[http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xuān]] ([[xuan1]])|wg=hsüan<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:愋]]
 [[li:愋]]
