--- a/en/愍/愍.15649.wikitext
+++ b/en/愍/愍.15649.wikitext
@@ -10,12 +10,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愍]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[man5]]|y=man5}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=mǐn
+|c=man5
+|mc=y
+|oc=y
+|ma=
+|cat=v
+}}
 
 ----
 
@@ -37,15 +43,6 @@
 {{ko-hanja|hangeul=민|eumhun=|rv=min|mr=min|y=min}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[mǐn]] ([[min3]])|wg=min<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:愍]]
 [[ko:愍]]
