--- a/en/愎/愎.15650.wikitext
+++ b/en/愎/愎.15650.wikitext
@@ -10,12 +10,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愎]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=bik1}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=bì
+|c=bik1
+|mc=y
+|oc=y
+|ma=
+|cat=a
+}}
 
 ----
 
@@ -37,15 +43,6 @@
 {{ko-hanja|hangeul=퍅|eumhun=|rv=pyak|mr=p'yak|y=phyak}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[bì]] ([[bi4]])|wg=pi<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:愎]]
 [[ko:愎]]
