--- a/en/愐/愐.15652.wikitext
+++ b/en/愐/愐.15652.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=9106<sub>0</sub>|canj=心一田中 (PMWL)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=9106<sub>0</sub>|canj=心一田中 (PMWL)|ids=⿰[[忄]][[面]]}}
 
 # [[bashful]]
 # to [[consider]]
