--- a/en/愑/愑.15653.wikitext
+++ b/en/愑/愑.15653.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心弓月尸 (PNBS)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心弓月尸 (PNBS)|ids=⿰[[忄]][[勇]]}}
 
 # {{defn|Han|sort=心09}}
 
