--- a/en/愓/愓.15655.wikitext
+++ b/en/愓/愓.15655.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=9802<sub>7</sub>|canj=心日一竹 (PAMH)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=9802<sub>7</sub>|canj=心日一竹 (PAMH)|ids=⿰[[忄]][[昜]]}}
 
-# [[profligate]]
+# [[profligate]], [[debauched]], [[recklessly]] [[wasteful]]
 
 ====References====
 * {{Han ref|kx=0395.020|dkj=10936|dj=0731.090|hdz=42327.130|uh=6113|ud=24851|bh=D945|bd=55621}}
