--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -22,15 +22,25 @@
 
 ----
 
-==Cantonese==
+{{yue-hanzi|jyut=[[]]|y=yeung4}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[joeng4]]|y=yeung4}}
+==Chinese==
+{{zh-hanzi-box|[[昜]]}}
 
-# {{defn|lang=yue|sort=日05}}
+===Pronunciation===
+{{zh-pron
+|m=yáng
+|c=joeng4
+|mn=iông
+|mc=y
+|oc=y
+|ma=
+|cat=v,a
+}}
 
 ====References====
-*[http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+*(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
+*(''Min Nan'') [http://cn.voicedic.com/ VoiceDic (汉语方言发音字典)]
 
 ----
 
@@ -46,33 +56,12 @@
 
 ----
 
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yáng]] ([[yang2]])|wg=yang<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
-
-----
-
-==Min Nan==
-
-===Hanzi===
-{{nan-hanzi|tlpa=iông (iong<sup>5</sup>)|gd=iong<sup>2</sup>}}
-
-# {{defn|lang=nan|sort=日05}}
-
-====References====
-*[http://cn.voicedic.com/ VoiceDic (汉语方言发音字典)]
-
-----
-
 ==Vietnamese==
 
 ===Han character===
-'''昜''' ([[dương]])
+{{vi-readings|rs=日05| hanviet = dương}}
 
-# {{defn|lang=vi}}
+# {{defn|lang=vi|sort=日05}}
 
 [[fr:昜]]
 [[hu:昜]]
