--- a/en/愔/愔.15656.wikitext
+++ b/en/愔/愔.15656.wikitext
@@ -43,7 +43,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[wěn]] ([[wen3]]), [[yīn]] ([[yin1]])|wg=wen<sup>3</sup>, yin<sup>1</sup>}}
+{{cmn-hanzi|pin=[[yīn]] ([[yin1]]), [[wěn]] ([[wen3]])|wg=wen<sup>3</sup>, yin<sup>1</sup>}}
 
 # {{defn|lang=cmn|sort=心09}}
 
