--- a/en/愔/愔.15656.wikitext
+++ b/en/愔/愔.15656.wikitext
@@ -10,12 +10,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愔]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=jam4|y=yam4}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=yīn,wěn
+|c=jam1,jam4
+|mc=y
+|oc=y
+|ma=
+|cat=a
+}}
 
 ----
 
@@ -37,15 +43,6 @@
 {{ko-hanja|hangeul=음|eumhun=|rv=eum|mr=ŭm|y=um}}
 
 # {{defn|lang=ko|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yīn]] ([[yin1]]), [[wěn]] ([[wen3]])|wg=wen<sup>3</sup>, yin<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:愔]]
 [[li:愔]]
