--- a/en/愕/愕.15657.wikitext
+++ b/en/愕/愕.15657.wikitext
@@ -10,12 +10,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愕]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[ngok6]]|y=ngok6}}
-
-# {{defn|lang=yue|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=è
+|c=ngok6
+|mc=y
+|oc=y
+|ma=
+|cat=a
+}}
 
 ----
 
@@ -40,21 +46,12 @@
 
 ----
 
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[è]] ([[e4]])|wg=o<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
-
-----
-
 ==Vietnamese==
 
 ===Han character===
-'''愕''' ([[ngạc]], [[ngắc]])
+{{vi-readings|rs=心09| hanviet = [[ngạc]], [[ngắc]]}}
 
-# {{defn|lang=vi}}
+# {{defn|lang=vi|sort=心09}}
 
 [[Category:Vietnamese Han tu]]
 
