--- a/en/愖/愖.15658.wikitext
+++ b/en/愖/愖.15658.wikitext
@@ -10,6 +10,21 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[愖]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=chén
+|c=sam4
+|mc=y
+|oc=y
+|ma=
+|cat=v
+}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -19,15 +34,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[しん]] (shin), [[じん]] (jin), [[たん]] (tan), [[とん]] (ton)|kun=[[まこと]] (makoto), [[たのしむ]] (tanoshimu)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chén]] ([[chen2]])|wg=ch'en<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[zh-min-nan:愖]]
 [[fr:愖]]
