--- a/en/愗/愗.15659.wikitext
+++ b/en/愗/愗.15659.wikitext
@@ -10,6 +10,24 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[愗]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=mào
+|c=mau6
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -19,15 +37,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[ぼう]] (bō), [[も]] (mo)|kun=[[おろか]] (oroka), [[やぶさか]] (yabusaka)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[mòu]] ([[mou4]])|wg=mou<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:愗]]
 [[li:愗]]
