--- a/en/愘/愘.15660.wikitext
+++ b/en/愘/愘.15660.wikitext
@@ -13,7 +13,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[kè]] ([[ke4]])|wg=k'o<sup>4</sup>}}
+{{cmn-hanzi|pin=[[qià]], [[kè]] ([[ke4]])|wg=k'o<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=心09}}
 
