--- a/en/愘/愘.15660.wikitext
+++ b/en/愘/愘.15660.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=9306<sub>4</sub>|canj=心十竹口 (PJHR)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=9306<sub>4</sub>|canj=心十竹口 (PJHR)|ids=⿰[[忄]][[客]]}}
 
 # {{defn|Han|sort=心09}}
 
