--- a/en/愘/愘.15660.wikitext
+++ b/en/愘/愘.15660.wikitext
@@ -10,12 +10,18 @@
 
 ----
 
-==Mandarin==
+==Chinese==
+{{zh-hanzi-box|[[愘]]}}
 
-===Hanzi===
-{{cmn-hanzi|pin=[[qià]], [[kè]] ([[ke4]])|wg=k'o<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=qià,kè
+|c=kok3
+|mc=
+|oc=
+|ma=
+|cat=
+}}
 
 [[fr:愘]]
 [[li:愘]]
