--- a/en/愙/愙.15661.wikitext
+++ b/en/愙/愙.15661.wikitext
@@ -10,6 +10,24 @@
 
 ----
 
+==Chinese==
+{{zh-hanzi-box|[[愙]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=kè
+|c=kok3
+|mc=y
+|oc=y
+|ma=
+|cat=
+}}
+
+====References====
+* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+
+----
+
 ==Japanese==
 
 ===Kanji===
@@ -19,15 +37,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[かく]] (kaku)|kun=[[つつしむ]] (tsutsushimu)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[kè]] ([[ke4]])|wg=k'o<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
 
 [[fr:愙]]
 [[li:愙]]
