--- a/en/愙/愙.15661.wikitext
+++ b/en/愙/愙.15661.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=十竹口心 (JHRP)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=十竹口心 (JHRP)|ids=⿱[[客]][[心]]}}
 
 # {{defn|Han|sort=心09}}
 
