--- a/en/愜/愜.15663.wikitext
+++ b/en/愜/愜.15663.wikitext
@@ -45,6 +45,18 @@
 
 # {{defn|lang=ko|sort=心09}}
 
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=心09| hanviet = [[khép]], [[khiếp]], [[thiếp]]}}
+
+# {{defn|lang=vi|sort=心09}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=611c Nom Foundation]
+
 [[fr:愜]]
 [[li:愜]]
 [[hu:愜]]
