--- a/en/愝/愝.15664.wikitext
+++ b/en/愝/愝.15664.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=9101<sub>4</sub>|canj=心尸日女 (PSAV)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=9101<sub>4</sub>|canj=心尸日女 (PSAV)|ids=⿰[[忄]][[匽]]}}
 
 # {{defn|Han|sort=心09}}
 
