--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -18,12 +18,82 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[感]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[gam2]]|y=gam2}}
+===Pronunciation===
+{{zh-pron
+|m=gǎn
+|c=gam2
+|h=
+|mn=kám
+|w=
+|mc=y
+|oc=y
+|ma=|ma2=
+|cat=v,n
+}}
 
-# {{defn|lang=yue|sort=心09}}
+====Compounds====
+* [[感触]]
+* [[感戴]]
+* [[感到]]
+* [[感德]]
+* [[感动]]
+* [[感恩]]
+* [[感恩戴德]]
+* [[感恩图报]]
+* [[感奋]]
+* [[感愤]]
+* [[感服]]
+* [[感官]]
+* [[感光]]
+* [[感光片]]
+* [[感光纸]]
+* [[感荷]]
+* [[感化]]
+* [[感怀]]
+* [[感激]]
+* [[感激涕零]]
+* [[感觉]]
+* [[感觉器官]]
+* [[感觉神经]]
+* [[感慨]] (gǎnkài)
+* [[感冒]]
+* [[感念]]
+* [[感泣]]
+* [[感情]]
+* [[感情用事]]
+* [[感染]]
+* [[感染力]]
+* [[感人]]
+* [[感人肺腑]]
+* [[感伤]]
+* [[感伤主义]]
+* [[感生电流]]
+* [[感受]]
+* [[感受器]]
+* [[感叹]]
+* [[感叹词]]
+* [[感叹号]]
+* [[感叹句]]
+* [[感同身受]]
+* [[感悟]]
+* [[感想]]
+* [[感谢]]
+* [[感兴趣]]
+* [[感性]]
+* [[感性认识]]
+* [[感性知识]]
+* [[感言]]
+* [[感应]]
+* [[感应电流]]
+* [[感应线圈]]
+* [[感召]]
+* [[感知]]
+
+====References====
+*[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=9457&curpage=1&sample=%E6%84%9F&radiobutton=1&querytarget=1&limit=20&pagenum=2&rowcount=35 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
 ----
 
@@ -92,85 +162,6 @@
 
 ====Compounds====
 * {{l|ko|感氣|tr=[[감기]], gamgi}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[gǎn]] ([[gan3]])|wg=kan<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
-
-====Compounds====
-* [[感触]]
-* [[感戴]]
-* [[感到]]
-* [[感德]]
-* [[感动]]
-* [[感恩]]
-* [[感恩戴德]]
-* [[感恩图报]]
-* [[感奋]]
-* [[感愤]]
-* [[感服]]
-* [[感官]]
-* [[感光]]
-* [[感光片]]
-* [[感光纸]]
-* [[感荷]]
-* [[感化]]
-* [[感怀]]
-* [[感激]]
-* [[感激涕零]]
-* [[感觉]]
-* [[感觉器官]]
-* [[感觉神经]]
-* [[感慨]] (gǎnkài)
-* [[感冒]]
-* [[感念]]
-* [[感泣]]
-* [[感情]]
-* [[感情用事]]
-* [[感染]]
-* [[感染力]]
-* [[感人]]
-* [[感人肺腑]]
-* [[感伤]]
-* [[感伤主义]]
-* [[感生电流]]
-* [[感受]]
-* [[感受器]]
-* [[感叹]]
-* [[感叹词]]
-* [[感叹号]]
-* [[感叹句]]
-* [[感同身受]]
-* [[感悟]]
-* [[感想]]
-* [[感谢]]
-* [[感兴趣]]
-* [[感性]]
-* [[感性认识]]
-* [[感性知识]]
-* [[感言]]
-* [[感应]]
-* [[感应电流]]
-* [[感应线圈]]
-* [[感召]]
-* [[感知]]
-
-----
-
-==Min Nan==
-
-===Hanzi===
-{{nan-hanzi|tlpa=[[kám]] (kam<sup>2</sup>)}}
-
-# {{defn|lang=nan|sort=心09}}
-
-====References====
-*[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=9457&curpage=1&sample=%E6%84%9F&radiobutton=1&querytarget=1&limit=20&pagenum=2&rowcount=35 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
 ----
 
