--- a/en/愠/愠.15667.wikitext
+++ b/en/愠/愠.15667.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心日月廿 (PABT)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心日月廿 (PABT)|ids=⿰[[忄]][[昷]]}}
 
 # [[angry]]
 
