--- a/en/昷/昷.16992.wikitext
+++ b/en/昷/昷.16992.wikitext
@@ -10,12 +10,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[昷]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[wan1]]|y=wan1}}
-
-# {{defn|lang=yue|sort=日05}}
+===Pronunciation===
+{{zh-pron
+|m=wēn,yùn
+|c=wan1
+|mc=
+|oc=y
+|ma=
+|cat=v
+}}
 
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
@@ -40,15 +46,6 @@
 {{ko-hanja|hangeul=온|eumhun=|rv=on|mr=on|y=on}}
 
 # {{defn|lang=ko|sort=日05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[wēn]] ([[wen1]]), [[yùn]] ([[yun4]])|wg=wen<sup>1</sup>, yün<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日05}}
 
 [[fr:昷]]
 [[ko:昷]]
