--- a/en/愡/愡.15668.wikitext
+++ b/en/愡/愡.15668.wikitext
@@ -1,9 +1,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=13|four=|canj=心心大心 (PPKP)}}
+{{Han char|rn=61|rad=心|as=09|sn=13|four=|canj=心心大心 (PPKP)|ids=⿰[[忄]][[怱]]}}
 
-# absent-minded, confused
+# [[absent-minded]], [[confused]]
 
 ====References====
 * {{Han ref|kx=0395.260|dkj=10956|dj=0734.020|hdz=42330.110|uh=6121|ud=24865}}
