--- a/en/愡/愡.15668.wikitext
+++ b/en/愡/愡.15668.wikitext
@@ -25,7 +25,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[lèng]] ([[leng4]]), [[zǒng]] ([[zong3]])|wg=leng<sup>4</sup>, tsung<sup>3</sup>}}
+{{cmn-hanzi|pin=[[zǒng]] ([[zong3]]), [[lèng]] ([[leng4]])|wg=leng<sup>4</sup>, tsung<sup>3</sup>}}
 
 # {{defn|lang=cmn|sort=心09}}
 
