--- a/en/愢/愢.15669.wikitext
+++ b/en/愢/愢.15669.wikitext
@@ -1,9 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心田心 (PWP)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心田心 (PWP)|ids=⿰[[忄]][[思]]}}
 
-# {{defn|Han|sort=心09}}
+# [[hesitant]]
+# [[modest]]
 
 ====References====
 * {{Han ref|kx=0395.270|dkj=10959|dj=0734.040|hdz=42328.090|uh=6122|ud=24866}}
