--- a/en/愣/愣.15670.wikitext
+++ b/en/愣/愣.15670.wikitext
@@ -25,7 +25,7 @@
 * {{audio|Zh-lèng.ogg|Audio|lang=cmn}}
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[léng]] ([[leng2]])|wg=leng<sup>2</sup>}}
+{{cmn-hanzi|pin=[[lèng]] ([[leng4]])|wg=leng<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=心09}}
 
