--- a/en/愤/愤.15671.wikitext
+++ b/en/愤/愤.15671.wikitext
@@ -12,21 +12,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|愤|[[憤]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=fan5|tra=憤}}
-
-# {{defn|lang=yue|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=憤|pin=[[fèn]] ([[fen4]]), [[shuò]] ([[shuo4]])|wg=fen<sup>4</sup>, shuo<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=fèn,shuò
+|c=fan5
+|mc=y
+|oc=y
+|ma=
+|cat=v,a
+}}
 
 [[fr:愤]]
 [[li:愤]]
