--- a/en/愥/愥.15672.wikitext
+++ b/en/愥/愥.15672.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心廿中大 (PTLK)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心廿中大 (PTLK)|ids=⿰[[忄]][[英]]}}
 
 # {{defn|Han|sort=心09}}
 
