--- a/en/愥/愥.15672.wikitext
+++ b/en/愥/愥.15672.wikitext
@@ -8,6 +8,24 @@
 ====References====
 * {{Han ref|kx=0396.071|hdz=42326.051|uh=6125|ud=24869}}
 
+----
+
+==Chinese==
+{{zh-hanzi-box|[[愥]]}}
+
+===Pronunciation===
+{{zh-pron
+|m=yīng
+|c=
+|mc=
+|oc=
+|ma=
+|cat=
+}}
+
+====References====
+*[http://www.cns11643.gov.tw/AIDB/query_general_view.do?page=3&code=6479 Chinese National Standards (Master Ideographs Seeker for CNS 11643)]
+
 [[fr:愥]]
 [[pl:愥]]
 [[zh:愥]]
