--- a/en/愦/愦.15673.wikitext
+++ b/en/愦/愦.15673.wikitext
@@ -2,9 +2,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心中一人 (PLMO)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心中一人 (PLMO)|ids=⿰[[忄]][[贵]]}}
 
-# confused, troubled, muddle-headed
+# [[confused]], [[troubled]], [[muddle-headed]]
 
 ====References====
 * {{Han ref|kx=0396.071|hdz=42328.060|uh=6126|ud=24870}}
