--- a/en/愦/愦.15673.wikitext
+++ b/en/愦/愦.15673.wikitext
@@ -11,21 +11,18 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|愦|[[憒]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=kui2|tra=憒}}
-
-# {{defn|lang=yue|sort=心09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=憒|pin=[[kuì]] ([[kui4]])|wg=k'uei<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心09}}
+===Pronunciation===
+{{zh-pron
+|m=kuì
+|c=kui2
+|mc=y
+|oc=y
+|ma=
+|cat=a
+}}
 
 [[fr:愦]]
 [[li:愦]]
