--- a/en/愧/愧.15674.wikitext
+++ b/en/愧/愧.15674.wikitext
@@ -2,9 +2,9 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=9601<sub>3</sub>|canj=心竹山戈 (PHUI)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=9601<sub>3</sub>|canj=心竹山戈 (PHUI)|ids=⿰[[忄]][[鬼]]}}
 
-# [[ashamed]], conscience-stricken
+# [[ashamed]], [[conscience]]-[[stricken]]
 
 ====References====
 * {{Han ref|kx=0396.080|dkj=10982|dj=0734.150|hdz=42329.110|uh=6127|ud=24871|bh=B75C|bd=46940}}
