--- a/en/愧/愧.15674.wikitext
+++ b/en/愧/愧.15674.wikitext
@@ -11,12 +11,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[愧]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=kwai3|y=kwai3}}
+===Pronunciation===
+{{zh-pron
+|m=kuì
+|c=kwai3,kwai5
+|mc=y
+|oc=y
+|ma=
+|cat=a
+}}
 
-# {{defn|lang=yue|sort=心10}}
+====Compounds====
+* [[愧对]]
+* [[愧恨]]
+* [[愧悔]]
+* [[愧疚]]
+* [[愧色]]
+* [[愧痛]]
 
 ----
 
@@ -42,23 +56,6 @@
 {{ko-hanja|hangeul=괴|eumhun=|rv=goe|mr=koe|y=koy}}
 
 # {{defn|lang=ko|sort=心10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[kuì]] ([[kui4]])|wg=k'uei<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=心10}}
-
-====Compounds====
-* [[愧对]]
-* [[愧恨]]
-* [[愧悔]]
-* [[愧疚]]
-* [[愧色]]
-* [[愧痛]]
 
 ----
 
