--- a/en/愨/愨.15675.wikitext
+++ b/en/愨/愨.15675.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=14|four=4733<sub>4</sub>|canj=土水心 (GEP), X土水心 (XGEP)}}
+{{Han char|rn=61|rad=心|as=10|sn=14|four=4733<sub>4</sub>|canj=土水心 (GEP), X土水心 (XGEP)|ids=⿱[[𣪊]][[心]]}}
 
 # [[sincerity]], [[honesty]]
 # [[cautious]]
